DOC-1893: New option highlight_on_focus and skin changes added new include to editor-important-options.adoc added new include to content-appearance.adoc

--- a/modules/ROOT/pages/content-appearance.adoc
+++ b/modules/ROOT/pages/content-appearance.adoc
@@ -20,3 +20,8 @@ To enable outlines for block elements, see: xref:visualblocks.adoc[The Visual Bl
 
 include::partial$misc/premium-upgrade-promotion-option.adoc[]
 
+== Highlighting the content area on focus
+
+To enable highlighting on focus for the editor,
+
+include::partial$configuration/highlight_on_focus.adoc[]
