--- a/modules/ROOT/pages/editor-important-options.adoc
+++ b/modules/ROOT/pages/editor-important-options.adoc
@@ -21,6 +21,8 @@ include::partial$configuration/auto_focus.adoc[leveloffset=+1]
 
 include::partial$configuration/custom_ui_selector.adoc[leveloffset=+1]
 
+include::partial$configuration/highlight_on_focus.adoc[leveloffset=+1]
+
 == Extend {productname} with plugins
 
 include::partial$misc/plugins-or-external_plugins.adoc[leveloffset=+1]
