DOC-1907: advcode-shortcuts.adoc
Copy-edit to cater for documenting future, non-search-related keyboard chords.

--- a/modules/ROOT/partials/misc/advcode-shortcuts.adoc
+++ b/modules/ROOT/partials/misc/advcode-shortcuts.adoc
@@ -1,6 +1,6 @@
 == Advanced Code Editor search and replace keyboard shortcuts
 
-Advanced Code Editor provides the following shortcuts for search and replace within the code dialog.
+Advanced Code Editor provides the following shortcuts within the code dialog.
 
 [cols=",,",options="header"]
 |===
