--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -9,13 +9,16 @@
 
 include::partial$misc/admon-premium-plugin.adoc[]
 
-The xref:advcode.adoc[Advanced Code Editor] plugin (`+advcode+`) brings a more advanced code editor to {productname}. This code editor makes it easier to modify the HTML, and it's a very useful add-on for power users. It comes with many features often found in IDEs, all enabled by default:
+The xref:advcode.adoc[Advanced Code Editor] plugin (`+advcode+`) brings a more advanced code editor to {productname}. This code editor makes it easier to modify the HTML, and is a useful add-on for power users. It comes with features often found in IDEs, all enabled by default:
 
-* Syntax color highlighting
-* Bracket matching
-* Code folding
-* Multiple selections/carets
-* Search and Replace
+* Syntax color highlighting.
+* Bracket matching.
+* Code folding.
+* Multiple selections/carets.
+* Search and Replace.
+* Dark or light mode button for code display.
+* Increase and decrease display font size buttons.
+* Full-screen mode button.
 
 == The difference between the Code and Advanced Code Editor plugins
 
