DOC-1929: multiple rtc-related files
Added `include::$partial/misc/admon-rtc-eol.adoc[]` statement to

* how-the-rtc-plugin-encrypts-content.adoc
* rtc-encryption.adoc
* rtc-events.adoc
* rtc-getting-started.adoc
* rtc-introduction.adoc
* rtc-jwt-authentication.adoc
* rtc-options-optional.adoc
* rtc-options-overview.adoc
* rtc-options-required.adoc
* rtc-supported-functionality.adoc
* rtc-troubleshooting.adoc

--- a/modules/ROOT/pages/rtc-encryption.adoc
+++ b/modules/ROOT/pages/rtc-encryption.adoc
@@ -5,6 +5,8 @@
 :pluginname: Real-Time Collaboration (RTC)
 :plugincode: rtc
 
+include::$partial/misc/admon-rtc-eol.adoc[]
+
 {productname} {pluginname} uses encryption keys to encrypt content before sending it to collaborators through the RTC server to provide end-to-end encryption. This is different from the use of JWTs for RTC, which are used to verify that your servers have allowed the user to access and collaborate on the content.
 
 CAUTION: The advice on this page does not guarantee a secure connection. If data secrecy is important for your users, please consult a security professional.
