--- a/modules/ROOT/pages/rtc-getting-started.adoc
+++ b/modules/ROOT/pages/rtc-getting-started.adoc
@@ -6,6 +6,8 @@
 :plugincode: rtc
 :numberedHeading: true
 
+include::$partial/misc/admon-rtc-eol.adoc[]
+
 This procedure will assist with setting up {productname} with real-time collaboration.
 
 [IMPORTANT]
