--- a/modules/ROOT/pages/rtc-introduction.adoc
+++ b/modules/ROOT/pages/rtc-introduction.adoc
@@ -3,6 +3,8 @@
 :description: What is RTC and what can it do
 :keywords: rtc, introduction, overview
 
+include::$partial/misc/admon-rtc-eol.adoc[]
+
 include::partial$rtc/rtc-description.adoc[]
 
 == Interactive example
