--- a/modules/ROOT/pages/rtc-options-optional.adoc
+++ b/modules/ROOT/pages/rtc-options-optional.adoc
@@ -5,6 +5,8 @@
 :pluginname: Real-Time Collaboration (RTC)
 :plugincode: rtc
 
+include::$partial/misc/admon-rtc-eol.adoc[]
+
 This section covers the recommended and optional configuration options for the RTC plugin. None of these options are required but assist with creating a consistent user experience between your application and {productname} {pluginname}.
 
 == Recommended options
