--- a/modules/ROOT/pages/rtc-supported-functionality.adoc
+++ b/modules/ROOT/pages/rtc-supported-functionality.adoc
@@ -5,6 +5,8 @@
 :pluginname: Real-Time Collaboration (RTC)
 :plugincode: rtc
 
+include::$partial/misc/admon-rtc-eol.adoc[]
+
 == Browser support
 
 The Real-Time Collaboration (RTC) plugin supports the latest desktop versions of:
