DOC_1929: multiple rtc-related files
Corrected error in my include:: statement.

-include::$partial/misc/admon-rtc-eol.adoc[]
+include::partial$/misc/admon-rtc-eol.adoc[]

--- a/modules/ROOT/pages/rtc-events.adoc
+++ b/modules/ROOT/pages/rtc-events.adoc
@@ -3,7 +3,7 @@
 :description: List of all available RTC specific events.
 :keywords: rtc, events
 
-include::$partial/misc/admon-rtc-eol.adoc[]
+include::partial$/misc/admon-rtc-eol.adoc[]
 
 == `+RtcClientConnected+`
 
