--- a/modules/ROOT/pages/rtc-options-overview.adoc
+++ b/modules/ROOT/pages/rtc-options-overview.adoc
@@ -5,7 +5,7 @@
 :pluginname: Real-Time Collaboration (RTC)
 :plugincode: rtc
 
-include::$partial/misc/admon-rtc-eol.adoc[]
+include::partial$/misc/admon-rtc-eol.adoc[]
 
 == Configuration style
 
