--- a/modules/ROOT/pages/rtc-troubleshooting.adoc
+++ b/modules/ROOT/pages/rtc-troubleshooting.adoc
@@ -3,7 +3,7 @@
 :description: Useful information for troubleshooting issues with the RTC plugin.
 :keywords: rtc, faq, trouble, troubleshoot, troubleshooting, bug
 
-include::$partial/misc/admon-rtc-eol.adoc[]
+include::partial$/misc/admon-rtc-eol.adoc[]
 
 This documentation is in progress. Please contact us with any suggestions you think should be here.
 
