--- a/modules/ROOT/pages/how-the-rtc-plugin-encrypts-content.adoc
+++ b/modules/ROOT/pages/how-the-rtc-plugin-encrypts-content.adoc
@@ -3,6 +3,6 @@
 :description: Useful information for understanding how encryption is used with RTC
 :keywords: rtc, encrypt, decrypt, key, signature
 
-include::$partial/misc/admon-rtc-eol.adoc[]
+include::partial$/misc/admon-rtc-eol.adoc[]
 
 include::partial$rtc/rtc-how-rtc-encryption-works.adoc[]
