--- a/modules/ROOT/pages/rtc-encryption.adoc
+++ b/modules/ROOT/pages/rtc-encryption.adoc
@@ -5,7 +5,7 @@
 :pluginname: Real-Time Collaboration (RTC)
 :plugincode: rtc
 
-include::$partial/misc/admon-rtc-eol.adoc[]
+include::partial$/misc/admon-rtc-eol.adoc[]
 
 {productname} {pluginname} uses encryption keys to encrypt content before sending it to collaborators through the RTC server to provide end-to-end encryption. This is different from the use of JWTs for RTC, which are used to verify that your servers have allowed the user to access and collaborate on the content.
 
