--- a/modules/ROOT/pages/rtc-options-required.adoc
+++ b/modules/ROOT/pages/rtc-options-required.adoc
@@ -5,7 +5,7 @@
 :pluginname: Real-Time Collaboration (RTC)
 :plugincode: rtc
 
-include::$partial/misc/admon-rtc-eol.adoc[]
+include::partial$/misc/admon-rtc-eol.adoc[]
 
 The following options are required to use the Real-Time Collaboration (RTC) plugin:
 
