DOC-1929: admon-rtc-eol.adoc
Updated admonition text to the approved text.

--- a/modules/ROOT/partials/misc/admon-rtc-eol.adoc
+++ b/modules/ROOT/partials/misc/admon-rtc-eol.adoc
@@ -1,2 +1,1 @@
-IMPORTANT: As of {productname} 6.4, the Real-Time Collaboration (RTC) Premium Plugin is no longer available for sale. This documentation remains available for existing users of the RTC Plugin. The RTC Plugin will be removed from {cloudname} as of version 7.0.
-
+IMPORTANT: TinyMCE’s Real-time Collaboration (RTC) plugin will be retired and deactivated on December 31, 2023, and is no longer available for purchase.
