DOC-1907: advcode.adoc
Added missing comment re changing value according to your HTML to fullscreen example.

--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -44,7 +44,7 @@ tinymce.init({
 [source,js]
 ----
 tinymce.init({
-  selector: "textarea",
+  selector: "textarea",  // change this value according to your HTML
   advcode_inline: true,
   plugins: [
     "code", "fullscreen", 'advcode',
