DOC-1893: accessibility.adoc
Added include:: statement to `accessibility.adoc`, pointing to `/partial/highlight_on_focus.adoc`.

--- a/modules/ROOT/pages/accessibility.adoc
+++ b/modules/ROOT/pages/accessibility.adoc
@@ -5,6 +5,8 @@
 
 include::partial$configuration/a11y_advanced_options.adoc[]
 
+include::partial$configuration/highlight_on_focus.adoc[]
+
 include::partial$configuration/iframe_aria_text.adoc[]
 
 include::partial$configuration/taborder.adoc[]
