--- a/modules/ROOT/pages/custom-split-toolbar-button.adoc
+++ b/modules/ROOT/pages/custom-split-toolbar-button.adoc
@@ -30,6 +30,9 @@ include::partial$misc/admon-predefined-icons-only.adoc[]
 |setEnabled |`+(state: boolean) => void+` |Sets the button's enabled state.
 |isActive |`+() => boolean+` |Checks the button's toggle state.
 |setActive |`+(state: boolean) => void+` |Sets the button's toggle state.
+3+|include::partial$misc/admon-requires-6.4v.adoc[]
+|setText |`+(text: string) => void+` |Sets the text label to display.
+|setIcon |`+(icon: string) => void+` |Sets the icon of the button.
 |===
 
 [[split-button-example-and-explanation]]
