DOC-1927: spellchecker_dialog.adoc
Typo corrections in `/modules/ROOT/partials/configuration/spellchecker_dialog.adoc`.

--- a/modules/ROOT/partials/configuration/spellchecker_dialog.adoc
+++ b/modules/ROOT/partials/configuration/spellchecker_dialog.adoc
@@ -3,8 +3,8 @@
 
 This option specifies the primary spell checking mode.
 
-* When set to `+true+`, the xref:introduction-to-tiny-spellchecker.adoc#toolbar-buttons[`+spellcheck+` toolbar button] will open a dialog that will step the user through each potential spelling error in the document.
-* When set to `+false+`, the xref:introduction-to-tiny-spellchecker.adoc#toolbar-buttons[`+spellcheck+` toolbar button] will enable or disable as-you-type spell checking and the xref:toolbar-buttons[`+spellcheckdialog+` toolbar button] will open the spell checker dialog.
+* When set to `+true+`, the xref:introduction-to-tiny-spellchecker.adoc#toolbar-buttons[`+spellchecker+` toolbar button] will open a dialog that will step the user through each potential spelling error in the document.
+* When set to `+false+`, the xref:introduction-to-tiny-spellchecker.adoc#toolbar-buttons[`+spellchecker+` toolbar button] will enable or disable as-you-type spell checking and the xref:toolbar-buttons[`+spellcheckdialog+` toolbar button] will open the spell checker dialog.
 
 *Type:* `+Boolean+`
 
