--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -296,7 +296,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 [[improvement]]
 == Improvement
 
-{productname} 6.4 also includes the following improvement:
+{productname} 6.4 also includes the following improvements:
 
 === Direct invalid child text nodes of list elements will be wrapped in list item elements.
 
