--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -293,8 +293,8 @@ The **Premium Skins and Icon Packs** were rebuilt to pull in the changes also in
 For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
 
 
-[[improvement]]
-== Improvement
+[[improvements]]
+== Improvements
 
 {productname} 6.4 also includes the following improvements:
 
