--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -60,7 +60,7 @@ After {productname} introduced the Smart Typography plugin, a bug was discovered
 .Example
 > “They went that way,[space introduced here]” he said as he pointed.
 
-As demonstrated in the example above, an unintentional or redundant space was inserted into a separate node position without intention.
+As demonstrated in the example above, an unintentional or redundant space was inserted into a separate node position.
 
 {productname} fixed the issue by changing the sequence of executing safe and unsafe rules surrounding Typography.
 
