--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -9,7 +9,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 
 === Fixed
 * The `fontsizeinput` increase and decrease size buttons now work on TinyMCE mobile.
-* The TinyMCE editor toolbar is now accessible for all screen widths; it no longer collapses into an inaccessible vertical line at any presented screen width.
+* The TinyMCE editor toolbar is now accessible for all screen widths; it no longer collapses into an inaccessible vertical line when the screen is scrolled horizontally.
 * Reverted the changes made, in TinyMCE 6.4.0, to UI button colors in focus, active, and enabled states.
 
 == 6.4.0 - 2023-03-16
