Corrections to advtemplate_templates example
Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/configuration/advtemplate_list.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_list.adoc
@@ -1,42 +1,40 @@
-[[advtemplate_list]]
-== `+advtemplate_list+`
+[[advtemplate_templates]]
+== `+ advtemplate_templates +`
 
 This options allows for the loading of templates from external data sources. 
 
-To load templates from an external source, configure the `advtemplate_list` option to return a `Promise` containing the initial template list.
+To load templates from an external source, configure the `advtemplate_templates ` option to return a `Promise` containing the initial template list.
 
 *Type:* `+Object+`
 
-=== Example: using `+advtemplate_list+` to load a template collection
+=== Example: using `+ advtemplate_templates +` to load a template collection
 
 [source,js]
 ----
 tinymce.init({
   plugins: 'advtemplate',
-  toolbar: 'advtemplate',
-  advtemplate_list: () => {
-      return Promise.resolve([
+  toolbar: 'addtemplate inserttemplate',
+  advtemplate_templates: [
+    {
+      id: 1,
+      title: 'Template 1'
+    },
+    {
+      id: 2,
+      title: 'Category 2',
+      items: [
         {
-          id: 1,
-          title: 'Template 1'
+          id: 3,
+          title: 'Template 2.1',
         },
         {
-          id: 2,
-          title: 'Category 2',
-          items: [
-            {
-              id: 3,
-              title: 'Template 2.1',
-            },
-            {
-              id: 4,
-              title: 'Category 2.2',
-              items: []
-            }
-          ]
+          id: 4,
+          title: 'Category 2.2',
+          items: []
         }
-    ]);
-  }
+      ]
+    }
+  ]
 })
 ----
 
