--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -19,8 +19,6 @@ They can also be added to a {productname} instance by end-users selecting conten
 
 IMPORTANT: This initial Advanced Template release does not support template editing. To update a particular template; insert the template into an editor; make edits; select the, now edited, content; and then create a new template (using, for example, the *Tools > Save as Template…* menu item).
 
-
-
 == Interactive example
 
 liveDemo::{plugincode}[]
@@ -69,6 +67,7 @@ tinymce.init({
 });
 ----
 
+NOTE: A unique id value must be provided for every input item.
 
 == Options
 
