--- a/modules/ROOT/partials/configuration/highlight_on_focus.adoc
+++ b/modules/ROOT/partials/configuration/highlight_on_focus.adoc
@@ -1,7 +1,7 @@
 [[highlight_on_focus]]
 == `+highlight_on_focus+`
 
-The `+highlight_on_focus+` option adds a blue outline to an instantiated {productname} editor when that editor is made the input focus.
+The `+highlight_on_focus+` option adds a blue outline to an instantiated {productname} editor when that editor is made the input focus. When using the `oxide-dark` skin, the outline is white.
 
 This allows users to clearly see when the editor is in focus, or which editor has focus if more than one {productname} instance is available.
 
