--- a/modules/ROOT/partials/configuration/highlight_on_focus.adoc
+++ b/modules/ROOT/partials/configuration/highlight_on_focus.adoc
@@ -1,6 +1,8 @@
 [[highlight_on_focus]]
 == `+highlight_on_focus+`
 
+include::partial/$misc/admon-requires-6.4v.adoc[]
+
 The `+highlight_on_focus+` option adds a blue outline to an instantiated {productname} editor when that editor is made the input focus. When using the `oxide-dark` skin, the outline is white.
 
 This allows users to clearly see when the editor is in focus, or which editor has focus if more than one {productname} instance is available.
