--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -359,7 +359,7 @@ In {productname} 6.4, pressing enter inside the `inputfontsize` input now return
 === New tree component that can be used in dialog body panel
 
 // https://ephocks.atlassian.net/browse/TINY-9532
-A new tree component has been created to support the *Advanced Template* premium plugin that works in conjuction with a new tree dialog body panel.
+A new tree component has been created to support the *Advanced Template* premium plugin that works in conjunction with a new tree dialog body panel.
 
 This tree component is limited to *one* level and is used in the dialog body panel to allow users to organize templates into levels for better UI. The tree component is designed to create a visual representation of the hierarchical structure for the template system, which allows users to easily identify the various templates and levels within each catagory, giving users the ability to quickly and easily navigate through the templates, and select the right one for their needs.
 
