--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -606,7 +606,7 @@ This update enables users to more easily and quickly access the modal dialogues 
 * Url Modal Dialog toolbar buttons. 
 
 [NOTE]
-Its worth nothing that the expected result for the Alert and Confrim dialogs is that the `initial focus` is set on the most appropriate button when the dialog is opened; for example, the “OK” button for Alert dialogs, and the “Yes” button for Confirm dialogs.
+Its worth nothing that the expected result for the Alert and Confirm dialogs is that the `initial focus` is set on the most appropriate button when the dialog is opened; for example, the “OK” button for Alert dialogs, and the “Yes” button for Confirm dialogs.
 
 In {productname} 6.4, these new additions/improvements are now available.
 // https://notion.so/tinycloud/Four-words-to-live-by-96e307110aaa4137b94f9ba12874d480
