Turned {pluginname} from bare noun to noun-phrase
Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -166,7 +166,7 @@ NOTE: By default, {productname} does not support `<style>` tags in the document 
 
 === Shadow DOM support
 
-IMPORTANT: Although the {pluginname} will likely work when an editor running in classic or inline mode is contained within a shadow root, Shadow DOM is **not** currently supported by {productname}.
+IMPORTANT: Although the {pluginname} plugin will likely work when an editor running in classic or inline mode is contained within a shadow root, Shadow DOM is **not** currently supported by {productname}.
 
 When a {productname} instance is in a shadow root, the {pluginame} should still support
 
