--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -11,7 +11,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 {productname} 6.4 was released for {enterpriseversion} and {cloudname} on Wednesday, March 15^th^, 2023. It includes {productname} 6.4, additional changes to Premium plugins, and a new Premium plugin, Advanced Template. These release notes provide an overview of the changes for {productname} 6.4:
 
-* xref:new-premium-plugin[New Premium plugin]
+* xref:new-premium-plugin[New Premium Plugin]
 * xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 * xref:accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
 * xref:improvement[Improvement]
