--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -23,7 +23,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 // NB: edit the equivalent section of nav.adoc when the remove or make visible decision is made.
 
 [[new-premium-plugin]]
-== New Premium plugin
+== New Premium Plugin
 
 === Advanced Template 1.0.0
 
